# captains-log

./: .gitignore  .prettierrc  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/: CREDITS.md
src/components/: BottomBar.tsx  CenterStage.tsx  ConfirmDialog.tsx  DatePicker.tsx  Editor.tsx  Elbow.tsx  ErrorBanner.tsx  FindReplace.tsx  LeftRail.tsx  MarkdownHelp.tsx  Modal.tsx  Preview.tsx  Schematic.tsx  Settings.tsx  Shell.tsx  Showcase.tsx  TopBar.tsx
src/components/primitives/: Bar.tsx  Cell.tsx  Elbow.tsx  Pill.tsx  index.ts
src/components/schematic/: Ship.tsx  WarpedShip.tsx
src/lib/: document.test.ts  document.ts  editor-keys.ts  file-ops.ts  frontmatter.test.ts  frontmatter.ts  lcars-colors.ts  lcars-id.ts  markdown.ts  settings.ts  sound.ts  stardate.test.ts  stardate.ts  use-autosave.ts  use-hash-route.ts  use-shortcuts.ts  use-ticker.ts
src/styles/: index.css
